[package]
name = "nia_console_client"
version = "0.1.0"
authors = ["Emirayka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.1.1"
dirs = "2.0.2"
ws = "0.9.1"
protobuf = { version = "2.14.0", features = ["with-bytes"] }
argh = "0.1.3"
nia_protocol_rust = { path = "../nia_protocol/nia_protocol_rust" }
